# widgets

./: README  README.md
lineedits/: CMakeLists.txt  lineedits.cpp  lineedits.h  lineedits.kdev4  main.cpp
lineedits/.kdev4/: lineedits.kdev4
